<?xml version="1.0" encoding="utf-8"?>
<com.hiber.tools.layout.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- banner -->
    <com.hiber.tools.layout.PercentRelativeLayout
        android:id="@+id/rl_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_heightPercent="9%h">

        <ImageView
            android:id="@+id/iv_fanyi_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/back"
            app:layout_heightPercent="40%h"
            app:layout_widthPercent="40%h" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/home_xingzuoyunshi"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_textSizePercent="33%h" />

    </com.hiber.tools.layout.PercentRelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_xingzuo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_banner" />

    <ScrollView
        android:id="@+id/sv_xingzuo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_banner"
        android:background="@android:color/white"
        android:visibility="gone">

        <com.hiber.tools.layout.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_xingzuo_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/xingzuo_date"
                app:layout_textSizePercent="4%w" />

            <TextView
                android:id="@+id/tv_xingzuo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/xingzuo_name"
                app:layout_textSizePercent="4%w" />

            <TextView
                android:id="@+id/tv_xingzuo_datetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/xingzuo_datetime"
                app:layout_textSizePercent="4%w" />

            <TextView
                android:id="@+id/tv_xingzuo_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/xingzuo_all"
                app:layout_textSizePercent="4%w" />

            <TextView
                android:id="@+id/tv_xingzuo_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/xingzuo_color"
                app:layout_textSizePercent="4%w" />

            <TextView
                android:id="@+id/tv_xingzuo_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/xingzuo_health"
                app:layout_textSizePercent="4%w" />

            <TextView
                android:id="@+id/tv_xingzuo_love"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/xingzuo_love"
                app:layout_textSizePercent="4%w" />

            <TextView
                android:id="@+id/tv_xingzuo_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/xingzuo_money"
                app:layout_textSizePercent="4%w" />

            <TextView
                android:id="@+id/tv_xingzuo_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/xingzuo_number"
                app:layout_textSizePercent="4%w" />

            <TextView
                android:id="@+id/tv_xingzuo_QFriend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/xingzuo_friend"
                app:layout_textSizePercent="4%w" />

            <TextView
                android:id="@+id/tv_xingzuo_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/xingzuo_summary"
                app:layout_textSizePercent="4%w" />

            <TextView
                android:id="@+id/tv_xingzuo_work"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/xingzuo_work"
                app:layout_textSizePercent="4%w" />

        </com.hiber.tools.layout.PercentLinearLayout>

    </ScrollView>

</com.hiber.tools.layout.PercentRelativeLayout>
