<?xml version="1.0" encoding="utf-8"?>
<com.hiber.tools.layout.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.hiber.tools.layout.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_heightPercent="6%sh">

        <com.hiber.tools.layout.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                app:layout_widthPercent="16.67%w"
                android:id="@+id/tv_class"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/train_class"
                app:layout_textSizePercent="30%h" />

            <TextView
                android:id="@+id/tv_fromPlace"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_widthPercent="16.67%w"
                android:gravity="center"
                android:text="@string/train_from_place"
                app:layout_textSizePercent="30%h" />

            <TextView
                android:id="@+id/tv_toPlace"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_widthPercent="16.67%w"
                android:gravity="center"
                android:text="@string/train_to_place"
                app:layout_textSizePercent="30%h" />

            <TextView
                android:id="@+id/tv_fromTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_widthPercent="16.67%w"
                android:gravity="center"
                android:text="@string/train_from_time"
                app:layout_textSizePercent="30%h" />

            <TextView
                android:id="@+id/tv_toTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_widthPercent="16.67%w"
                android:gravity="center"
                android:text="@string/train_to_time"
                app:layout_textSizePercent="30%h" />

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_widthPercent="16.67%w"
                android:gravity="center"
                android:text="@string/train_duration"
                app:layout_textSizePercent="30%h" />

        </com.hiber.tools.layout.PercentLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/darker_gray" />

    </com.hiber.tools.layout.PercentRelativeLayout>

</com.hiber.tools.layout.PercentRelativeLayout>
