<?xml version="1.0" encoding="utf-8"?>
<com.hiber.tools.layout.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- banner -->
    <com.hiber.tools.layout.PercentRelativeLayout
        android:id="@+id/rl_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_heightPercent="9%h">

        <ImageView
            android:id="@+id/iv_train_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/back"
            app:layout_heightPercent="40%h"
            app:layout_widthPercent="40%h" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/home_huochepiao"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_textSizePercent="33%h" />

    </com.hiber.tools.layout.PercentRelativeLayout>

    <!-- content -->
    <com.hiber.tools.layout.PercentRelativeLayout
        android:id="@+id/rl_train_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_banner"
        android:layout_centerHorizontal="true"
        app:layout_heightPercent="7%h"
        app:layout_widthPercent="50%w">

        <TextView
            android:id="@+id/tv_train_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_banner"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/date"
            android:textColor="@color/colorPrimary"
            app:layout_textSizePercent="40%h" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_banner"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/tv_train_date"
            android:src="@drawable/down"
            app:layout_heightPercent="30%h"
            app:layout_widthPercent="30%h" />

    </com.hiber.tools.layout.PercentRelativeLayout>

    <com.hiber.tools.layout.PercentRelativeLayout
        android:id="@+id/rl_train_from_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_train_date"
        android:gravity="center_horizontal"
        app:layout_heightPercent="9%h">

        <EditText
            android:id="@+id/et_train_from"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/train_from"
            android:inputType="text"
            android:maxLines="1"
            app:layout_textSizePercent="30%h"
            app:layout_widthPercent="30%w" />

        <TextView
            android:id="@+id/tv_train_to"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@id/et_train_from"
            android:gravity="center_vertical"
            android:text="@string/to"
            app:layout_textSizePercent="30%h" />

        <EditText
            android:id="@+id/et_train_to"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/tv_train_to"
            android:gravity="center"
            android:hint="@string/train_to"
            android:inputType="text"
            android:maxLines="1"
            app:layout_textSizePercent="30%h"
            app:layout_widthPercent="30%w" />

    </com.hiber.tools.layout.PercentRelativeLayout>

    <TextView
        android:id="@+id/tv_train_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_train_from_to"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bt2_seletor"
        android:gravity="center"
        android:text="@string/query"
        android:textColor="@android:color/white"
        app:layout_heightPercent="7%h"
        app:layout_marginTopPercent="5%h"
        app:layout_textSizePercent="2.5%h"
        app:layout_widthPercent="80%w" />

    <com.hiber.tools.layout.PercentRelativeLayout
        android:id="@+id/rl_trainlist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_train_check"
        android:layout_centerHorizontal="true"
        app:layout_heightPercent="6%h"
        app:layout_marginTopPercent="2%h"
        app:layout_widthPercent="80%w">

        <com.hiber.tools.layout.PercentLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/train_class"
                app:layout_textSizePercent="35%h"
                app:layout_widthPercent="16.67%w" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/train_from_place"
                app:layout_textSizePercent="35%h"
                app:layout_widthPercent="16.67%w" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/train_to_place"
                app:layout_textSizePercent="35%h"
                app:layout_widthPercent="16.67%w" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/train_from_time"
                app:layout_textSizePercent="35%h"
                app:layout_widthPercent="16.67%w" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/train_to_time"
                app:layout_textSizePercent="35%h"
                app:layout_widthPercent="16.67%w" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/train_duration"
                app:layout_textSizePercent="35%h"
                app:layout_widthPercent="16.67%w" />

        </com.hiber.tools.layout.PercentLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/darker_gray" />

    </com.hiber.tools.layout.PercentRelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_train"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_trainlist_title"
        android:layout_centerHorizontal="true"
        app:layout_marginBottomPercent="4%h"
        app:layout_widthPercent="80%w" />

    <CalendarView
        android:id="@+id/cv_train"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_banner"
        android:background="@android:color/white"
        android:visibility="visible" />

</com.hiber.tools.layout.PercentRelativeLayout>
