<?xml version="1.0" encoding="utf-8"?>
<com.hiber.tools.layout.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- banner -->
    <com.hiber.tools.layout.PercentRelativeLayout
        android:id="@+id/rl_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_heightPercent="9%h">

        <ImageView
            android:id="@+id/iv_kuaidi_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/back"
            app:layout_heightPercent="40%h"
            app:layout_widthPercent="40%h" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/home_kuaidichaxun"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_textSizePercent="33%h" />

    </com.hiber.tools.layout.PercentRelativeLayout>

    <EditText
        android:id="@+id/et_kuaidi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_banner"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_edit"
        android:hint="@string/input_your_express_num"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_heightPercent="6%h"
        app:layout_marginTopPercent="5%h"
        app:layout_textSizePercent="2.3%h"
        app:layout_widthPercent="80%w" />

    <TextView
        android:id="@+id/tv_kuaidi_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_kuaidi"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bt2_seletor"
        android:gravity="center"
        android:text="@string/query"
        android:textColor="@android:color/white"
        app:layout_heightPercent="7%h"
        app:layout_marginTopPercent="5%h"
        app:layout_textSizePercent="2.5%h"
        app:layout_widthPercent="60%w" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_kuaidi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_kuaidi_click"
        android:layout_centerHorizontal="true"
        app:layout_marginBottomPercent="5%h"
        app:layout_marginTopPercent="5%h"
        app:layout_widthPercent="80%w" />

</com.hiber.tools.layout.PercentRelativeLayout>
