<?xml version="1.0" encoding="utf-8"?>
<com.hiber.tools.layout.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- banner -->
    <com.hiber.tools.layout.PercentRelativeLayout
        android:id="@+id/rl_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_heightPercent="9%h">

        <ImageView
            android:id="@+id/iv_fanyi_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/back"
            app:layout_heightPercent="40%h"
            app:layout_widthPercent="40%h" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/home_fanyi"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_textSizePercent="33%h" />

    </com.hiber.tools.layout.PercentRelativeLayout>

    <!-- content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_banner"
        android:overScrollMode="never"
        android:scrollbars="none">

        <com.hiber.tools.layout.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_fanyi_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/icon_fanyi"
                app:layout_heightPercent="20%w"
                app:layout_marginTopPercent="5%h"
                app:layout_widthPercent="20%w" />

            <EditText
                android:id="@+id/et_fanyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_fanyi_icon"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_edit"
                android:hint="@string/fanyi_input_ori"
                android:inputType="textMultiLine"
                android:maxLength="1000"
                android:minHeight="40dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                app:layout_marginTopPercent="3%h"
                app:layout_textSizePercent="2.5%h"
                app:layout_widthPercent="80%w" />

            <TextView
                android:id="@+id/tv_fanyi_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_fanyi"
                android:layout_alignStart="@id/et_fanyi"
                android:background="@drawable/bt2_seletor"
                android:gravity="center"
                android:text="@string/home_fanyi"
                android:textColor="@android:color/white"
                app:layout_heightPercent="7%h"
                app:layout_marginTopPercent="5%h"
                app:layout_textSizePercent="2.5%h"
                app:layout_widthPercent="30%w" />

            <com.hiber.tools.layout.PercentRelativeLayout
                android:id="@+id/rl_fanyi_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_fanyi"
                android:layout_alignEnd="@id/et_fanyi"
                app:layout_heightPercent="7%h"
                app:layout_marginTopPercent="5%h"
                app:layout_widthPercent="25%w">

                <ImageView
                    android:id="@+id/iv_fanyi_arrow_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/down"
                    app:layout_heightPercent="30%h"
                    app:layout_widthPercent="30%h" />

                <TextView
                    android:id="@+id/tv_set_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@id/iv_fanyi_arrow_down"
                    android:text="@string/fanyi_china"
                    app:layout_textSizePercent="35%h" />

            </com.hiber.tools.layout.PercentRelativeLayout>

            <TextView
                android:id="@+id/tv_fanyi_translate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_fanyi_click"
                android:layout_centerHorizontal="true"
                android:hint="@string/please_input_your_origin_text"
                android:textColor="@color/colorPrimary"
                app:layout_marginTopPercent="5%h"
                app:layout_textSizePercent="2.5%h"
                app:layout_widthPercent="80%w" />

        </com.hiber.tools.layout.PercentRelativeLayout>

    </ScrollView>

    <!-- 透明背景 -->
    <ImageView
        android:id="@+id/iv_alpha_click"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_banner"
        android:alpha="0.6"
        android:background="@android:color/darker_gray"
        android:visibility="gone" />

    <!-- choice recyclerview -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcv_language_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:background="@drawable/bg3"
        android:visibility="gone"
        app:layout_heightPercent="60%h"
        app:layout_widthPercent="60%w" />

</com.hiber.tools.layout.PercentRelativeLayout>
